--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -147,8 +147,8 @@ button:hover {
 
 .progressSection {
   position: fixed;
-  right: 5%;
-  bottom: 5%;
+  right: 140px;
+  bottom: 40px;
   width: 1px;
   height: 150px;
   display: -webkit-box;
@@ -223,14 +223,14 @@ button:hover {
   position: fixed;
   width: 70px;
   height: 70px;
-  left: 5%;
+  left: 140px;
   top: 5%;
   z-index: 100;
 }
 
 .open-menu {
   position: fixed;
-  right: 5%;
+  right: 140px;
   top: 5%;
   width: 60px;
   height: 60px;
@@ -241,7 +241,7 @@ button:hover {
 
 .closed-menu {
   position: fixed;
-  right: 5%;
+  right: 140px;
   top: 5%;
   width: 60px;
   height: 60px;
@@ -326,10 +326,15 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
+  margin: 5vh auto 5vh;
+  max-width: 1640px;
+  z-index: 80;
 }
 
 .container {
-  width: 90%;
+  height: 100%;
+  width: 100%;
   margin: 0 auto;
   max-width: 1640px;
   z-index: 80;
@@ -358,32 +363,6 @@ span {
   color: var(--purple);
 }
 
-.heading {
-  position: relative;
-  width: 60%;
-  left: 20%;
-  margin: 100px 0;
-}
-
-.heroText {
-  position: absolute;
-  width: auto;
-  left: 17%;
-  bottom: 10%;
-}
-
-.canvas-1 {
-  top: 0;
-}
-
-.upper-heading {
-  padding-bottom: 20px;
-}
-
-.lower-heading {
-  padding-bottom: 40px;
-}
-
 .text {
   color: var(--light);
 }
@@ -393,14 +372,65 @@ span {
 }
 
 #section-a {
-  min-height: 100vh;
-  background-image: url(/Images/Backgrounds/Piotr-Bania.svg);
-  background-position: center;
+  background-image: url(/Assets/Images/Backgrounds/Piotr-Bania.svg);
+  background-position: left;
   background-repeat: no-repeat;
   background-size: auto;
+  height: 90vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+  -ms-grid-rows: (1fr)[6];
+      grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
 }
 
 #section-a h1 {
   color: var(--light);
+}
+
+#section-a .container {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 5;
+  grid-area: 4 / 2 / 7 / 7;
+}
+
+@media screen and (max-width: 768px) {
+  .progressSection {
+    right: 5%;
+    bottom: 5%;
+  }
+  .logo {
+    left: 5%;
+    top: 5%;
+  }
+  .open-menu {
+    right: 5%;
+    top: 5%;
+  }
+  section {
+    margin: 5vh auto 5vh;
+  }
+  #section-a {
+    height: 90vh;
+    width: 90vw;
+    -ms-grid-columns: (1fr)[8];
+        grid-template-columns: repeat(8, 1fr);
+    -ms-grid-rows: (1fr)[8];
+        grid-template-rows: repeat(8, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+  }
+  #section-a .container {
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 8;
+    grid-area: 6 / 1 / 9 / 9;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
