--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -151,8 +151,8 @@ button:hover {
 
 .progressSection {
     position: fixed;
-    right: 5%;
-    bottom: 5%;
+    right: 140px;
+    bottom: 40px;
     width: 1px;
     height: 150px;
     display: flex;
@@ -222,14 +222,14 @@ button:hover {
     position: fixed;
     width: 70px;
     height: 70px;
-    left: 5%;
+    left: 140px;
     top: 5%;
     z-index: 100;
 }
 
 .open-menu {
     position: fixed;
-    right: 5%;
+    right: 140px;
     top: 5%;
     width: 60px;
     height: 60px;
@@ -240,7 +240,7 @@ button:hover {
 
 .closed-menu {
     position: fixed;
-    right: 5%;
+    right: 140px;
     top: 5%;
     width: 60px;
     height: 60px;
@@ -318,10 +318,15 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    margin: 5vh auto 5vh;
+    max-width: 1640px;
+    z-index: 80;
 }
 
 .container {
-    width: 90%;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
     max-width: 1640px;
     z-index: 80;
@@ -351,32 +356,6 @@ span {
     color: var(--purple);
 }
 
-.heading {
-    position: relative;
-    width: 60%;
-    left: 20%;
-    margin: 100px 0;
-}
-
-.heroText {
-    position: absolute;
-    width: auto;
-    left: 17%;
-    bottom: 10%;
-}
-
-.canvas-1 {
-    top: 0;
-}
-
-.upper-heading {
-    padding-bottom: 20px;
-}
-
-.lower-heading {
-    padding-bottom: 40px;
-}
-
 .text {
     color: var(--light);
 }
@@ -389,13 +368,60 @@ span {
 // ------------------------------ Section A ------------------------------
 
 #section-a {
-    min-height: 100vh;
-    background-image: url(/Images/Backgrounds/Piotr-Bania.svg);
-    background-position: center;
+    background-image: url(/Assets/Images/Backgrounds/Piotr-Bania.svg);
+    background-position: left;
     background-repeat: no-repeat;
     background-size: auto;
 
+    height: 90vh;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+
     h1 {
         color: var(--light);
+    }
+
+    .container {
+        grid-area: 4 / 2 / 7 / 7;
+    }
+}
+
+// ------------------------------ @media ------------------------------
+
+@media screen and (max-width: 768px) {
+    .progressSection {
+        right: 5%;
+        bottom: 5%;
+    }
+
+    .logo {
+        left: 5%;
+        top: 5%;
+    }
+
+    .open-menu {
+        right: 5%;
+        top: 5%;
+    }
+
+    section {
+        margin: 5vh auto 5vh;
+    }
+
+    #section-a {
+        height: 90vh;
+        width: 90vw;
+
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        grid-column-gap: 16px;
+        grid-row-gap: 16px;
+
+        .container {
+            grid-area: 6 / 1 / 9 / 9;
+        }
     }
 }
