--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -151,7 +151,6 @@ button:hover {
 
 .progressSection {
     position: fixed;
-    right: 140px;
     bottom: 5%;
     width: 1px;
     height: 150px;
@@ -395,6 +394,10 @@ span {
         padding: 7px;
     }
 
+    .progressSection {
+        right: 140px;
+    }
+
     #section-a {
         .container {
             grid-area: 4 / 2 / 7 / 7;
@@ -423,6 +426,10 @@ span {
         width: 60px;
         height: 60px;
         padding: 6px;
+    }
+
+    .progressSection {
+        right: 5%;
     }
 
     #section-a {
